Set id on caption per FCC requirements for testing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div id="img-div">
         <figure>
           <img id="image" src="https://i.ytimg.com/vi/xU7S1nWBrFQ/maxresdefault.jpg">
-          <figcaption>The Prayer at Valley Forge</figcaption>
+          <figcaption id="image-caption">The Prayer at Valley Forge</figcaption>
         </figure>
       </div>
     </div>
